[package]
name = "use-command-name"
description = "Command and executable name primitives for RustUse CLI-adjacent code"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-command-name"
keywords = ["cli", "command", "binary", "name", "rustuse"]
categories = ["command-line-interface", "rust-patterns"]

[lints]
workspace = true