[package]
name = "use-option"
description = "Primitive CLI option key-value types for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-option"
keywords = ["cli", "option", "key", "value", "rustuse"]
categories = ["command-line-interface", "rust-patterns"]

[lints]
workspace = true
