[package]
name = "use-stderr"
description = "Synchronous stderr primitives for RustUse CLI-adjacent code"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-stderr"
keywords = ["cli", "stderr", "error", "write", "rustuse"]
categories = ["command-line-interface", "rust-patterns"]

[lints]
workspace = true
